fix: body overflow hidden

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -6,8 +6,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body,
